# Scena

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: ci.yml
capi/: CMakeLists.txt
capi/include/kinema/: capi.h
capi/include/scena/: capi.h
capi/src/: capi.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  FloatingPoint.cmake  Sanitizers.cmake
core/: CMakeLists.txt
core/include/kinema/: engine.h  version.h
core/include/kinema/gateway/: road_query.h  simulator_gateway.h
core/include/kinema/ir/: action.h  condition.h  scenario.h
core/include/kinema/runtime/: clock.h  scheduler.h
core/include/scena/: diagnostic.h  engine.h  entity_state.h  entity_visibility.h  status.h  version.h
core/include/scena/gateway/: road_query.h  simulator_gateway.h
core/include/scena/ir/: action.h  bounding_box.h  condition.h  controller.h  coordinate_system.h  date_time.h  dynamics.h  entity.h  entity_condition.h  entity_types.h  environment.h  evaluation_context.h  interaction_condition.h  position.h  route.h  rule.h  scenario.h  storyboard.h  traffic_signal.h  trajectory.h  trigger.h
core/include/scena/runtime/: clock.h  detmath.h  distance_measure.h  element_ref.h  lateral.h  longitudinal.h  obb2.h  position_resolver.h  scheduler.h  trajectory_eval.h
core/src/: engine.cpp  version.cpp
core/src/ir/: action.cpp  condition.cpp  date_time.cpp  entity.cpp  entity_condition.cpp  interaction_condition.cpp  rule.cpp  trigger.cpp
core/src/runtime/: clock.cpp  detmath.cpp  distance_measure.cpp  element_ref.cpp  lateral.cpp  longitudinal.cpp  obb2.cpp  position_resolver.cpp  scheduler.cpp  trajectory_eval.cpp
core/tests/: CMakeLists.txt  action_controller_visibility_test.cpp  action_distance_test.cpp  action_global_test.cpp  action_ir_test.cpp  action_lateral_test.cpp  action_longitudinal_test.cpp  action_routing_test.cpp  action_teleport_test.cpp  bounding_box_test.cpp  capi_test.cpp  clock_test.cpp  condition_byentity_interaction_test.cpp  condition_byentity_kinematics_test.cpp  condition_byvalue_test.cpp  control_ownership_test.cpp  determinism_test.cpp  detmath_test.cpp  diagnostics_test.cpp  engine_test.cpp  entity_model_test.cpp  entity_types_test.cpp  event_priority_test.cpp  lateral_test.cpp  longitudinal_test.cpp  obb2_test.cpp  position_test.cpp  scheduler_test.cpp  storyboard_test.cpp  traffic_signal_test.cpp  trajectory_test.cpp  trigger_test.cpp  version_test.cpp
core/tests/support/: detmath_probe.cpp  detmath_probe.h  fixtures.cpp  fixtures.h  trace_recorder.cpp  trace_recorder.h  trace_runner.cpp
docs/architecture/: ADR-0001-project-vision.md  ADR-0002-licensing-and-clean-room.md  ADR-0003-simulator-gateway.md  ADR-0004-road-to-v001.md  ADR-0005-action-lifetime-and-event-priority.md  ADR-0006-deterministic-transcendental-math.md  ADR-0007-condition-evaluation-context.md  ADR-0008-entity-kinematics-observation.md  ADR-0009-interaction-metrics.md  ADR-0010-entity-taxonomy.md  ADR-0011-longitudinal-dynamics.md  ADR-0012-relicense-to-apache-2.0.md  ADR-0013-private-actions-longitudinal-teleport.md  ADR-0014-private-actions-routing-distance-controllers.md  ADR-0015-global-infrastructure-actions.md  ADR-0016-lateral-kinematics.md  ADR-0017-position-resolution-and-control-ownership.md  ADR-0018-trajectory-shapes.md
docs/roadmap/: golden-scenarios.md  roadmap.md  tracking.md
docs/roadmap/coverage/: osc-dsl-coverage.md  osc-xml-coverage.md
docs/roadmap/issues/: p1-s1-storyboard-ir.md  p1-s2-triggers.md  p1-s3-event-lifecycle.md  p1-s4-diagnostics.md  p1-s5-determinism-hardening.md  p1-tracking.md  p2-s1-entity-taxonomy.md  p2-s2-longitudinal-dynamics.md  p2-s3-lateral-dynamics.md  p2-s4-positions-host-roundtrip.md  p2-s5-trajectories.md  p2-tracking.md  p3-s1-roadquery-v1.md  p3-s2-opendrive-geometry.md  p3-s3-lanes-routes.md  p3-s4-road-integration.md  p3-tracking.md  p4-s1-xml-infrastructure.md  p4-s2-storyboard-loading.md  p4-s3-parameters-expressions.md  p4-s4-catalogs-controllers.md  p4-s5-versions-validation.md  p4-tracking.md  p5-s1-byvalue-conditions.md  p5-s2-byentity-conditions-1.md  p5-s3-byentity-conditions-2.md  p5-s4-private-actions-1.md  p5-s5-private-actions-2.md  p5-s6-global-actions.md  p5-tracking.md  p6-s1-capi-expansion.md  p6-s2-gateway-maturity.md  p6-s3-python-parity.md  p6-s4-scena-run-golden.md  p6-tracking.md  p7-s1-dsl-grammar.md  p7-s2-parser-ast.md  p7-s3-types-symbols.md  p7-s4-expressions-constraints.md  p7-s5-stdlib-scena-check.md  (+6 more)
docs/user-guide/: conditions.md  determinism.md  entities.md  error-handling.md  global-actions.md  index.md  motion.md  positions.md  routing.md  storyboard.md  triggers.md
frontends/dsl/: README.md
frontends/xml/: CMakeLists.txt
frontends/xml/include/kinema/xml/: loader.h
frontends/xml/include/scena/xml/: loader.h
frontends/xml/src/: loader.cpp
python/: CMakeLists.txt  pyproject.toml
python/examples/: byentity_conditions.py  byvalue_conditions.py  distance_keeping.py  entity_model.py  global_actions.py  hello_engine.py  interaction_conditions.py  lane_change.py  longitudinal.py  positions.py  relative_speed.py  routing.py  traffic_signals.py  trajectory_shapes.py
python/src/: bindings.cpp
python/src/kinema/: __init__.py
python/src/scena/: __init__.py
python/tests/: test_byentity_conditions.py  test_byvalue_conditions.py  test_diagnostics.py  test_distance_keeping.py  test_entity_model.py  test_event_lifecycle.py  test_global_actions.py  test_hello_engine.py  test_interaction_conditions.py  test_lateral.py  test_longitudinal.py  test_positions.py  test_private_actions.py  test_routing_actions.py  test_traffic_signals.py  test_trajectory.py
scripts/: build.sh  check_coverage_matrix.py  check_detmath.sh  fetch_asam_specs.py  format.sh  gen_detmath_coeffs.py  roadmap-gh-seed.sh
