# SPDX-License-Identifier: MIT
include(GoogleTest)

function(scn_add_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE scena::core GTest::gtest_main)
    target_compile_features(${name} PRIVATE cxx_std_20)
    set_target_properties(${name} PROPERTIES CXX_EXTENSIONS OFF)
    scn_set_warnings(${name})
    scn_set_fp_strictness(${name})
    scn_enable_sanitizers(${name})
    gtest_discover_tests(${name} DISCOVERY_TIMEOUT 60)
endfunction()

scn_add_test(version_test)
scn_add_test(clock_test)
scn_add_test(scheduler_test)
scn_add_test(storyboard_test)
scn_add_test(engine_test)
scn_add_test(determinism_test)
scn_add_test(detmath_test)
scn_add_test(trigger_test)
scn_add_test(event_priority_test)
scn_add_test(diagnostics_test)

if(SCN_BUILD_CAPI)
    scn_add_test(capi_test)
    target_link_libraries(capi_test PRIVATE scena::capi)
endif()
